# public/swagger.json
@@ -93,6 +93,12 @@
           "description" : "name of vocabulary to return",
           "required" : true,
           "type" : "string"
+        }, {
+          "name" : "Authorization",
+          "in" : "header",
+          "description" : "authorization token",
+          "required" : true,
+          "type" : "string"
         } ],
         "responses" : {
           "200" : {
